// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EntitlementsInlineEditFormatter edit mode when available quantities are being loaded renders spinner 1`] = `
<td
  className="editable editing"
>
  <Spinner
    className=""
    inline={false}
    inverse={false}
    loading={true}
    size="xs"
  >
    <FormGroup
      bsClass="form-group"
    >
      <FormControl
        bsClass="form-control"
        componentClass="input"
        defaultValue={100}
        onBlur={[Function]}
        type="text"
      />
      <HelpBlock
        bsClass="help-block"
      >
        <div
          className="validationMessages"
        />
      </HelpBlock>
    </FormGroup>
  </Spinner>
</td>
`;

exports[`EntitlementsInlineEditFormatter edit mode when available quantities are loaded renders changed values 1`] = `
<td
  className="editable editing changed"
>
  <Spinner
    className=""
    inline={false}
    inverse={false}
    loading={false}
    size="xs"
  >
    <FormGroup
      bsClass="form-group"
    >
      <FormControl
        bsClass="form-control"
        componentClass="input"
        defaultValue={100}
        onBlur={[Function]}
        type="text"
      />
      <HelpBlock
        bsClass="help-block"
      >
        Max 300
        <div
          className="validationMessages"
        />
      </HelpBlock>
    </FormGroup>
  </Spinner>
</td>
`;

exports[`EntitlementsInlineEditFormatter edit mode when available quantities are loaded renders edit field and max available 1`] = `
<td
  className="editable editing"
>
  <Spinner
    className=""
    inline={false}
    inverse={false}
    loading={false}
    size="xs"
  >
    <FormGroup
      bsClass="form-group"
    >
      <FormControl
        bsClass="form-control"
        componentClass="input"
        defaultValue={100}
        onBlur={[Function]}
        type="text"
      />
      <HelpBlock
        bsClass="help-block"
      >
        Max 600
        <div
          className="validationMessages"
        />
      </HelpBlock>
    </FormGroup>
  </Spinner>
</td>
`;

exports[`EntitlementsInlineEditFormatter edit mode when available quantities are loaded renders edit field and unlimited message 1`] = `
<td
  className="editable editing"
>
  <Spinner
    className=""
    inline={false}
    inverse={false}
    loading={false}
    size="xs"
  >
    <FormGroup
      bsClass="form-group"
    >
      <FormControl
        bsClass="form-control"
        componentClass="input"
        defaultValue={100}
        onBlur={[Function]}
        type="text"
      />
      <HelpBlock
        bsClass="help-block"
      >
        Unlimited
        <div
          className="validationMessages"
        />
      </HelpBlock>
    </FormGroup>
  </Spinner>
</td>
`;

exports[`EntitlementsInlineEditFormatter edit mode when available quantities are loaded renders validation message 1`] = `
<td
  className="editable editing"
>
  <Spinner
    className=""
    inline={false}
    inverse={false}
    loading={false}
    size="xs"
  >
    <FormGroup
      bsClass="form-group"
      validationState="error"
    >
      <FormControl
        bsClass="form-control"
        componentClass="input"
        defaultValue={200}
        onBlur={[Function]}
        type="text"
      />
      <HelpBlock
        bsClass="help-block"
      >
        Max 150
        <div
          className="validationMessages"
        >
          Exceeds available quantity
        </div>
      </HelpBlock>
    </FormGroup>
  </Spinner>
</td>
`;

exports[`EntitlementsInlineEditFormatter edit mode when available quantities failed to load renders just the edit field 1`] = `
<td
  className="editable editing"
>
  <Spinner
    className=""
    inline={false}
    inverse={false}
    loading={false}
    size="xs"
  >
    <FormGroup
      bsClass="form-group"
    >
      <FormControl
        bsClass="form-control"
        componentClass="input"
        defaultValue={200}
        onBlur={[Function]}
        type="text"
      />
      <HelpBlock
        bsClass="help-block"
      >
        <div
          className="validationMessages"
        />
      </HelpBlock>
    </FormGroup>
  </Spinner>
</td>
`;

exports[`EntitlementsInlineEditFormatter value mode renders the value 1`] = `
<td
  className="editable"
>
  <div
    className="input"
    onClick={[Function]}
    onKeyPress={[Function]}
    role="textbox"
    tabIndex={0}
  >
    200
  </div>
</td>
`;

exports[`EntitlementsInlineEditFormatter value mode renders unlimited for -1 1`] = `
<td>
  Unlimited
</td>
`;
